2008-04-09  Marcus D. Hanwell  <marcus@cryos.org>

	* libavogadro/src/glwidget.cpp: Fixed bug where display lists were
	not being invalidated when the display quality was adjusted.

	* libavogadro/src/engines/forceengine.cpp,
	libavogadro/src/engines/orbitalengine.cpp,
	libavogadro/src/engines/surfaceengine.cpp: Fixed some compiler
	warnings.

2008-04-09  Marcus D. Hanwell  <marcus@cryos.org>

	* libavogadro/src/camera.h, libavogadro/src/textrenderer.h,
	libavogadro/src/tools/drawtool.cpp: Fixed a few compiler warnings.

2008-04-08  Marcus D. Hanwell  <marcus@cryos.org>

	* libavogadro/src/CMakeLists.txt: Remove duplicate call to automoc.

2008-04-07  Marcus D. Hanwell  <marcus@cryos.org>

	* CMakeLists.txt: Only set the linker flags on Linux systems.

	* libavogadro/src/CMakeLists.txt: Disabled the visibility flags for
	now as they seem to break forcefield support.

	* avogadro/src/mainwindow.cpp: Added a warning dialog when no engines
	and/or tools were loaded.

	* libavogadro/src/CMakeLists.txt,
	libavogadro/src/engines/CMakeLists.txt, libavogadro/src/glwidget.cpp:
	Statically linked the ball and stick engine to libavogadro. This
	guarantees the minimal ability to display a molecule.

2008-04-06  Marcus D. Hanwell  <marcus@cryos.org>

	* CMakeLists.txt: Added the pedantic compiler flag to spot many issues
	with C++ code such as those picked up by KDE developers. Also
	introduce symbol hiding if a recent GCC is installed. We now need to
	explicitly export all symbols on Linux/Apple systems.

	* cmake/modules/FindBoostPython.cmake,
	cmake/modules/MacroEnsureVersion.cmake: Extra cmake modules from KDE
	4.1 (trunk) to improve Boost Python detection and check versions.

	* libavogadro/src/CMakeLists.txt,
	libavogadro/src/extensions/CMakeLists.txt: Improve the Boost Python
	detection and link to the dynamic Python library.

	* avogadro/src/application.h, avogadro/src/enginelistview.h,
	avogadro/src/engineprimitiveswidget.h,